# Syncodoro

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.cursor/rules/: embedded-firmware-standards.mdc
docs/: index.html  manifest.json
main/: CMakeLists.txt  idf_component.yml  main.c
main/bsp/: cyd.c  cyd.h
main/config/: nvs_config.c  nvs_config.h
main/model/: pomo_model.c  pomo_model.h
main/network/: http_server.c  http_server.h  wifi_manager.c  wifi_manager.h
main/storage/: config_json.c  config_json.h  session_csv.c  session_csv.h
main/ui/: ui_history.c  ui_history.h  ui_settings.c  ui_settings.h  ui_setup.c  ui_setup.h  ui_theme.c  ui_theme.h  ui_timer.c  ui_timer.h
